[project]
name = "nwp-query"
version = "0.1.0"
description = "NWP query experiments"
authors = [
    { name = "markkvdb", email = "github@mvanderbroek.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/nwp_query"]